welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: value =< is not a member of Int
  if ((a=<20 && a>=10) || (b=<20 && b>=10)) { 
        ^in1020:2: error: value =< is not a member of Int
  if ((a=<20 && a>=10) || (b=<20 && b>=10)) { 
                            ^